Change button label and fix layout issue

--- a/src/css/Talk.css
+++ b/src/css/Talk.css
@@ -1,21 +1,19 @@
 .talk-container {
-  width: 100%;
-  display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: space-between;
+  width: 100%;
 }
 
 .choice-group {
   width: 150px;
   max-height: 100px;
+  font-size: 1rem;
 }
 
-.choice-group p,
+.choice-group,
 .added-choice {
   padding: 0;
   margin: 0;
-  font-size: 1.3rem;
+  font-size: 1rem;
 }
 
 .choice-container {
